View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0031856 | Open CASCADE | OCCT:DRAW | public | 2020-10-17 13:59 | 2020-12-02 17:13 |
Reporter | kgv | Assigned To | bugmaster | ||
Priority | normal | Severity | minor | ||
Status | closed | Resolution | fixed | ||
Product Version | 7.4.0 | ||||
Target Version | 7.5.0 | Fixed in Version | 7.5.0 | ||
Summary | 0031856: Draw Harness - ReadStep should propagate progress indicator | ||||
Description | Commands ReadStep, WriteStep, ReadIges, WriteIges, XOpen, XSave ignore progress indicator enabled by XProgress command. | ||||
Steps To Reproduce | Problem 1:pload XDE OCAF VISUALIZATION XProgress +g XOpen "myFile.xbf" D # KO1 - progress indicator does not appear Problem 2: pload XDE OCAF VISUALIZATION XProgress +g XOpen "DUMMY" D # KO2 - error message does not appear in log after fixing KO1 | ||||
Tags | No tags attached. | ||||
Test case number | Not required | ||||
|
Branch CR31856 has been created by kgv. SHA-1: 452f6ef5455a383f1f4be262584794f4559e0c5d Detailed log of new commits: Author: kgv Date: Sat Oct 17 14:04:49 2020 +0300 0031856: Draw Harness - ReadStep should propagate progress indicator Added progress indication to commands ReadStep, WriteStep, ReadIges, WriteIges, XOpen, XSave. Draw_ProgressIndicator::Reset() now backups Tcl result string before evaluating command, so that Draw_ProgressIndicator destructor will not eat error/result message in main command. |
|
Branch CR31856 has been updated forcibly by kgv. SHA-1: 46a18baf08c900c0999de4c170a68969b54218f3 |
|
Patch is ready for review - OCCT branch: CR31856. http://jenkins-test-12.nnov.opencascade.com/view/CR31856-master-KGV/ |
|
No remarks, please integrate |
|
Combination - OCCT branch : IR-2020-10-23 master SHA - 9f9490e1ae0eaf38507437019a117437c6317225 a206de37fbfa0bf71bd534ae47192bbec23b8522 Products branch : IR-2020-10-23 SHA - 4594c3ef5cc6ec5816231ba88e2a4863a25a06d2 was compiled on Linux, MacOS and Windows platforms and tested in optimize mode. Number of compiler warnings: No new/fixed warnings Regressions/Differences/Improvements: No regressions/differences CPU differences: Debian80-64: OCCT Total CPU difference: 18000.12000000008 / 18036.38000000013 [-0.20%] Products Total CPU difference: 12171.670000000115 / 12174.520000000093 [-0.02%] Windows-64-VC14: OCCT Total CPU difference: 19723.78125 / 19746.3125 [-0.11%] Products Total CPU difference: 13538.390625 / 13565.046875 [-0.20%] Image differences : No differences that require special attention Memory differences : No differences that require special attention |
|
Branch CR31856 has been deleted by inv. SHA-1: 46a18baf08c900c0999de4c170a68969b54218f3 |
occt: master 1877dc98 2020-10-17 11:04:49 Committer: bugmaster Details Diff |
0031856: Draw Harness - ReadStep should propagate progress indicator Added progress indication to commands ReadStep, WriteStep, ReadIges, WriteIges, XOpen, XSave. Draw_ProgressIndicator::Reset() now backups Tcl result string before evaluating command, so that Draw_ProgressIndicator destructor will not eat error/result message in main command. |
Affected Issues 0031856 |
|
mod - src/Draw/Draw_ProgressIndicator.cxx | Diff File | ||
mod - src/XDEDRAW/XDEDRAW.cxx | Diff File | ||
mod - src/XDEDRAW/XDEDRAW_Common.cxx | Diff File |
Date Modified | Username | Field | Change |
---|---|---|---|
2020-10-17 13:59 | kgv | New Issue | |
2020-10-17 13:59 | kgv | Assigned To | => abv |
2020-10-17 14:02 | git | Note Added: 0096037 | |
2020-10-17 14:07 | git | Note Added: 0096038 | |
2020-10-17 17:44 | kgv | Note Added: 0096040 | |
2020-10-17 17:44 | kgv | Status | new => resolved |
2020-10-19 07:19 | abv | Note Added: 0096047 | |
2020-10-19 07:19 | abv | Assigned To | abv => bugmaster |
2020-10-19 07:19 | abv | Status | resolved => reviewed |
2020-10-24 12:18 | bugmaster | Note Added: 0096189 | |
2020-10-24 12:18 | bugmaster | Status | reviewed => tested |
2020-10-24 12:21 | bugmaster | Test case number | => Not required |
2020-10-24 12:30 | bugmaster | Changeset attached | => occt master 1877dc98 |
2020-10-24 12:30 | bugmaster | Status | tested => verified |
2020-10-24 12:30 | bugmaster | Resolution | open => fixed |
2020-10-24 12:41 | git | Note Added: 0096219 | |
2020-12-02 16:22 | emo | Fixed in Version | => 7.5.0 |
2020-12-02 17:13 | emo | Status | verified => closed |